--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node": ">=22"
   },
   "workspaces":[
+    "liquid-staking-protocol-ui",
     "contract/liquid-staking-contract",
     "server",
     "liquid-staking-ui"
