--- a/contract/liquid-staking-protocol-contract/tsconfig.json
+++ b/contract/liquid-staking-protocol-contract/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.d.ts"],
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
     "declaration": true,
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "DOM"],
     "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "node",
@@ -14,6 +14,7 @@
     "strict": true,
     "isolatedModules": true,
     "sourceMap": true,
+    "erasableSyntaxOnly": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true
