--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@midnight-ntwrk/wallet-sdk-address-format": "^2.0.0",
     "fp-ts": "^2.16.11",
     "io-ts": "^2.2.22",
-    "pino": "^10.1.0",
-    "pino-pretty": "^13.1.2",
     "rxjs": "^7.8.2",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "pino": "^9.7.0",
+    
+    "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
