feat: implement full contract logic and unit testing

--- a/liquid-staking-protocol-ui/package.json
+++ b/liquid-staking-protocol-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "liquid-staking-protocol-ui",
+  "name": "@repo/liquid-staking-protocol-ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -84,7 +84,7 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
-    "@repo/liquid-staking-protocol-contract": "workspace:*",
+    "@repo/hydra-stake-protocol": "workspace:*",
     "@repo/liquid-staking-api": "workspace:*",
     "@eslint/js": "^9.33.0",
     "@tailwindcss/postcss": "^4.1.12",
