--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.d.ts"],
+  "include": ["src/**/*.ts"],
   "compilerOptions": {
-    "rootDir": "src",
+    // "rootDir": "src",
     "outDir": "dist",
     "declaration": true,
-    "lib": ["ESNext", "DOM"],
+    "lib": ["ESNext"],
     "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "node",
@@ -14,9 +14,9 @@
     "strict": true,
     "isolatedModules": true,
     "sourceMap": true,
-    "erasableSyntaxOnly": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "."
   }
 }
