--- a/contract/liquid-staking-contract/package.json
+++ b/contract/liquid-staking-contract/package.json
@@ -28,6 +28,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
     "uuid": "^13.0.0",
     "vitest": "^4.0.8"
   }
