--- a/cli/package.json
+++ b/cli/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "@repo/liquid-staking-cli",
-  "type": "module",
-  "version": "0.1.0",
-  "author": "IOG",
+  "name": "@hydra-stake-protocol/test-cli",
+  "version": "1.0.0",
+  "main": "index.js",
   "license": "MIT",
-  "private": true,
+  "type": "module",
+  "packageManager": "pnpm@9.0.0",
   "scripts": {
-    "testnet-remote": "node --experimental-specifier-resolution=node dist/launcher/testnet-remote.js",
+    "testnet-remote": "node --loader ts-node/esm --experimental-specifier-resolution=node dist/launcher/testnet-remote.js",
     "testnet-remote-ps": "node --experimental-specifier-resolution=node dist/launcher/testnet-remote-start-proof-server.js",
     "testnet-local": "node --experimental-specifier-resolution=node dist/launcher/testnet-local.js",
-    "standalone": "docker compose -f standalone.yml pull && node --experimental-specifier-resolution=node dist/launcher/standalone.js",
-    "prepack": "yarn build",
-    "test": "yarn test-e2e",
+    "standalone": "node --experimental-specifier-resolution=node dist/launcher/standalone.js",
+    "prepack": "pnpm build",
+    "test": "pnpm test-e2e",
     "test-e2e": "NODE_OPTIONS=--experimental-vm-modules jest  --detectOpenHandles --forceExit",
-    "build": "rm -rf dist && tsc",
+    "build": "rm -rf dist && tsc --project tsconfig.build.json",
+    "prebuild": "rm -rf dist && tsc --project tsconfig.build.json",
     "lint": "eslint src"
   },
   "dependencies": {
-    "@repo/hydra-stake-protocol": "workspace:*",
     "pino": "^8.16.1",
+    "testcontainers": "^11.8.1",
+    "ts-node": "^10.9.2",
     "ws": "^8.14.2"
   },
   "devDependencies": {
@@ -29,7 +31,6 @@
     "allure-js-commons": "^3.0.5",
     "eslint": "^8.52.0",
     "jest": "^29.7.0",
-    "testcontainers": "^10.27.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.2.2"
   }
