--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/api/*.ts"],
   "compilerOptions": {
     // "rootDir": "src",
     "outDir": "dist",
@@ -7,7 +7,7 @@
     "lib": ["ESNext"],
     "target": "ES2022",
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
@@ -18,9 +18,5 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "baseUrl": "."
-  },
-  "buildOptions": {
-    "extends": "./tsconfig.json",
-    "exclude": ["src/**/*.test.ts"]
   }
 }
