--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "check-types": "turbo run check-types"
   },
   "dependencies": {
-    "@midnight-ntwrk/compact-runtime": "^0.8.1",
+    "@midnight-ntwrk/compact-runtime": "^0.9.0",
     "@midnight-ntwrk/dapp-connector-api": "^3.0.0",
     "@midnight-ntwrk/ledger": "^4.0.0",
     "@midnight-ntwrk/midnight-js-contracts": "^2.0.2",
@@ -51,7 +51,8 @@
     "node": ">=22"
   },
   "workspaces": [
-    "liquid-staking-cli",
+    "cli",
+    "api",
     "liquid-staking-protocol-ui",
     "contract/liquid-staking-contract",
     "server"
