--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -16,7 +16,7 @@
     }
   },
   "scripts": {
-    "compact": "compact compile src/hydra-stake-protocol.compact ./src/managed/hydra-stake-protocol",
+    "compact": "compact compile --skip-zk src/hydra-stake-protocol.compact ./src/managed/hydra-stake-protocol",
     "compact-dev": "compact compile src/hydra-stake-protocol.compact ./src/managed/hydra-stake-protocol",
     "build": "rm -rf dist && tsc --project tsconfig.build.json && cp -R ./src/managed ./dist/managed && cp ./src/hydra-stake-protocol.compact dist",
     "prebuild": "rm -rf dist && tsc --project tsconfig.build.json && cp -R ./src/managed ./dist/managed && cp ./src/hydra-stake-protocol.compact dist",
